# RPA-Farmacia-Sismed

./: .env  .env.example  .gitignore  .running  @AutomationLog.txt  AGENTS.md  Notas.txt  README.md  _debug_sp.py  example.env  ingresos.xlsx  main (registro de pedido).py  main_ (Notadeingreso).py  movimientos.xlsx  prueba.py  pyproject.toml  requirements.txt  salidas.xlsx  setup.bat
Movimientos09062026/: correr_pipeline.bat  ingresos.py  main.py  salidas.py
PedidosSP/: data_simulator.py  pedido_SP.py
database/: conexion.py
docs/: 01-arquitectura.md  02-modelos.md  03-flujos.md  04-reportes.md  05-despliegue.md  06-desarrollo.md
scripts/: correr_bot.bat  prueba.py
scripts/pipeline_09062026/: ingresos.py  main.py
sismed_wrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __main__.py  config.py  data_simulator.py  logger.py  paths.py  simulacion_ingreso_test.py  simulacion_salida_test.py
src/datos/: sp_adapter.py  test_data.py
src/flujos/: _comun_almacen.py  _login.py  extorno.py  ingreso.py  pedido.py  salida.py  test_salida_lote.py
src/helpers/: cliente.py  combo.py  diagnosticos.py  farmacia.py  input.py  manejo_errores.py  producto.py  registro_cliente.py  selecionar.py  ui_helper.py  windows.py
src/models/: Medicamento.py  Salidas.py  cliente.py  diagnostico.py  enums.py  extorno.py  farmacia.py  forma_pago.py  ingreso.py  pedido.py  prescriptor.py  producto.py  producto_ingreso.py  validation_utils.py
src/notifications/: email_sender.py
src/sidmed/: _login.py  (+5 more)
tests/: test_children.py  test_ingreso.py  test_pedido.py  test_salida.py
(+15 files in other folders)
