[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sismed_wrapper"
version = "0.1.0"
description = "Short description of your project"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Your Name", email = "your@email.com" }
]

keywords = ["python", "desktop"]

dependencies = [
    "uiautomation==2.0.29"
]

[project.optional-dependencies]
dev = [
    "python-dotenv==1.2.2"
]
